[FIX] backend quality - EncryptionFunctions: replaced call to 'replaceAll()' to 'replace()'